corrigindo o trabalho (criando portfólio)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul class="nav-list">
           <li><a href="#about">Sobre mim</a></li>
           <li><a href="#experience">Formação Acadêmica</a></li>
-          <li><a href="#hobbies">Hobbies</a></li>
+          <li><a href="#portfolio">Portfólio</a></li>
           <li><a href="#contact">Contato</a></li>
         </ul>
       </div>
@@ -31,8 +31,9 @@
   <section id="about">
     <div class="about">
       <h2>Quem sou eu?</h2>
-      <p>Olá! Me chamo Nicole, sou uma estudante de Análise e Desenvolvimento de Sistemas com uma paixão por tecnologia e inovação. Atualmente, estou no segundo semestre da faculdade, onde tenho me aprofundado em fundamentos de desenvolvimento de software, design, lógica de programação e muito mais. Com uma sólida base em HTML, CSS e JavaScript, além de um conhecimento crescente em Python, estou sempre buscando aprender e me atualizar nas últimas tendências do mercado! 🤖💜</p>
+      <p>Olá! Me chamo Nicole, sou estudante de Análise e Desenvolvimento de Sistemas e estou no segundo semestre da faculdade, onde me aprofundei em fundamentos de desenvolvimento de software, design e lógica de programação. Tenho uma base sólida em HTML, CSS e JavaScript, e estou expandindo meus conhecimentos em Python. Sou apaixonada por tecnologia e sempre busco aprender sobre as últimas tendências. Fora da programação, sou fã de jogos online como League of Legends e Valorant, que não só me divertem, mas também aprimoram minhas habilidades de estratégia e trabalho em equipe.💜</p>
     </div>
+
   </section>
 
   <section id="experience">
@@ -48,17 +49,26 @@
     </div>
   </section>
 
-  <section id="hobbies">
-    <div class="hobbies">
-      <h2>Meus interesses</h2>
-      <p>Fora do mundo da programação, eu tenho uma grande paixão por jogos online, especialmente League of Legends e Valorant. Estes jogos não apenas me proporcionam entretenimento, mas também desafiam minha estratégia e habilidades de trabalho em equipe. Através deles, aprendi a importância da comunicação eficaz em ambientes colaborativos. 🎮🩷</p>
+  <section id="portfolio">
+    <div class="portfolio">
+      <h2>Portfólio</h2>
+      <p>Aqui você encontrará uma seleção dos projetos em que trabalhei recentemente. Embora meu portfólio ainda esteja em crescimento, estou constantemente buscando novas oportunidades para aprimorar minhas habilidades e ampliar minha experiência.🩷</p>
+      <div class="projects">
+        <a href="https://nicolevlc.github.io/projeto-zingen/" target="_blank">
+          <img src="assets/projeto-1.png" alt="LP com design responsivo">
+        </a>
+        <a href="https://nicolevlc.github.io/projeto-travelgram/" target="_blank">
+          <img src="assets/projeto-2.png" alt="Página de um perfil de viagens">
+        </a>
+        <a href="https://nicolevlc.github.io/projeto-formulario-de-matricula/" target="_blank">
+          <img src="assets/projeto-3.png" alt="Página de Formulário de matrícula escolar">
+        </a>
+        <a href="https://nicolevlc.github.io/projeto-portal-de-noticias/" target="_blank">
+          <img src="assets/projeto-4.png" alt="Projeto de um portal de nóticias">
+        </a>
+      </div>
     </div>
-    <div class="ahri">
-      <img src="assets/ahri-emote-1.png" alt="emote da personagem Ahri do League of Legends">
-      <img src="assets/ahri-emote-2.png" alt="emote da personagem Ahri do League of Legends">
-      <img src="assets/ahri-emote-3.png" alt="emote da personagem Ahri do League of Legends">
-      <img src="assets/ahri-emote-4.png" alt="emote da personagem Ahri do League of Legends">
-    </div>
+
   </section>
 
   <section id="contact">
