corrigindo detalhes do html e css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br"> 
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -8,8 +8,8 @@
   <title>Portfólio da Nicole Volcian Ascenção</title>
   <link rel="stylesheet" href="styles/index.css">
   <link rel="stylesheet" href="styles/about.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -29,15 +29,14 @@
   </header>
 
   <section id="about">
-    <div class="about">
+    <div class="div-about">
       <h2>Quem sou eu?</h2>
       <p>Olá! Me chamo Nicole, sou estudante de Análise e Desenvolvimento de Sistemas e estou no segundo semestre da faculdade, onde me aprofundei em fundamentos de desenvolvimento de software, design e lógica de programação. Tenho uma base sólida em HTML, CSS e JavaScript, e estou expandindo meus conhecimentos em Python. Sou apaixonada por tecnologia e sempre busco aprender sobre as últimas tendências. Fora da programação, sou fã de jogos online como League of Legends e Valorant, que não só me divertem, mas também aprimoram minhas habilidades de estratégia e trabalho em equipe.💜</p>
     </div>
-
   </section>
 
   <section id="experience">
-    <div class="experience">
+    <div class="div-experience">
       <h2>Formação Acadêmica</h2>
       <p>Além dos meus estudos dentro da faculdade, adoro participar de eventos e fazer cursos por fora que me façam trabalhar em projetos práticos aplicando e expandindo minhas habilidades. Estou sempre em busca de novas oportunidades para mergulhar de cabeça e aprimorar meus conhecimentos, minha criatividade e dedicação. Segue abaixo alguns dos cursos e eventos que participei! ✨🚀 </p>
     </div>
@@ -50,7 +49,7 @@
   </section>
 
   <section id="portfolio">
-    <div class="portfolio">
+    <div class="div-portfolio">
       <h2>Portfólio</h2>
       <p>Aqui você encontrará uma seleção dos projetos em que trabalhei recentemente. Embora meu portfólio ainda esteja em crescimento, estou constantemente buscando novas oportunidades para aprimorar minhas habilidades e ampliar minha experiência.🩷</p>
       <div class="projects">
@@ -72,7 +71,7 @@
   </section>
 
   <section id="contact">
-    <div class="contact">
+    <div class="div-contact">
       <h2>Contato</h2>
       <p>Entre em contato comigo preenchendo o formulário abaixo:</p>
     </div>
