correção de detalhes no trabalho

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <header>
     <div class="logo-color">
@@ -48,6 +49,7 @@
     </div>
   </section>
 
+  <!-- Seção de contato -->
   <section id="portfolio">
     <div class="div-portfolio">
       <h2>Portfólio</h2>
@@ -67,31 +69,33 @@
         </a>
       </div>
     </div>
-
   </section>
 
+  <!-- Seção de contato -->
   <section id="contact">
     <div class="div-contact">
       <h2>Contato</h2>
       <p>Entre em contato comigo preenchendo o formulário abaixo:</p>
     </div>
-  <form action="#" method="get">
-    <div class="form-group">
-      <label for="nome">Nome:</label>
-      <input type="text" id="nome" name="nome" required>
-    </div>
-    <div class="form-group">
-      <label for="email">E-mail:</label>
-      <input type="email" id="email" name="email" required>
-    </div>
-    <div class="form-group">
-      <label for="mensagem">Deixe sua mensagem:</label>
-      <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
-    </div>
-    <button type="submit">Enviar</button>
-  </form>
-</section>
+    <!-- Formulário de contato -->
+    <form action="#" method="get">
+      <div class="form-group">
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" name="nome" required>
+      </div>
+      <div class="form-group">
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" required>
+      </div>
+      <div class="form-group">
+        <label for="mensagem">Deixe sua mensagem:</label>
+        <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
+      </div>
+      <button type="submit">Enviar</button>
+    </form>
+  </section>
 
+  <!-- Rodapé -->
   <footer>
     <p>&copy; 2024 Portfólio da Nicole Volcian Ascenção</p>
     <div class="footer-icons">
